syntax = "proto3";
package pb;

option go_package = "./proto";

message TickData {
    // Basic info
    uint32 instrument_token = 1;
    bool is_tradable = 2;
    bool is_index = 3;
    string mode = 4;

    // Timestamps
    int64 timestamp = 5;
    int64 last_trade_time = 6;

    // Price and quantity
    double last_price = 7;
    uint32 last_traded_quantity = 8;
    uint32 total_buy_quantity = 9;
    uint32 total_sell_quantity = 10;
    uint32 volume_traded = 11;
    uint32 total_buy = 12;
    uint32 total_sell = 13;
    double average_trade_price = 14;

    // OI related
    uint32 oi = 15;
    uint32 oi_day_high = 16;
    uint32 oi_day_low = 17;
    double net_change = 18;

    // OHLC data
    message OHLC {
        double open = 1;
        double high = 2;
        double low = 3;
        double close = 4;
    }
    OHLC ohlc = 19;

    // Depth data
    message DepthItem {
        double price = 1;
        uint32 quantity = 2;
        uint32 orders = 3;
    }

    message Depth {
        repeated DepthItem buy = 1;
        repeated DepthItem sell = 2;
    }
    Depth depth = 20;
}